# rs_ctrl_os

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  example_config.toml  multi_pub_config.toml  multi_sub_config.toml  pub_config.toml  rpc_arm_config.toml  rpc_control_config.toml  sub_config.toml
.cargo/: config.toml
.github/workflows/: release.yml
c_examples/: CMakeLists.txt  minimal.c  minimal.cpp  pubsub_chat.c  pubsub_chat_pub.toml  pubsub_chat_sub.toml  tutorial_node.c
examples/: multi_pub_node.rs  multi_sub_node.rs  pub_node.rs  rpc_arm_node.rs  rpc_control_node.rs  sub_node.rs
include/: rs_ctrl_os.h
src/: comms.rs  config.rs  discovery.rs  error.rs  ffi.rs  lib.rs  time_sync.rs
tests/: c_ffi_smoke.rs  config_parse.rs  discovery_cleanup_regression.rs  discovery_shutdown.rs  time_sync.rs
