[package]
name = "rs_ctrl_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
notify = "8.2.0"
once_cell = "1.21.3"
serde = {version="1.0.228",features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.18"
time = "0.3.47"
tokio = "1.50.0"
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zmq = "0.10.0"
socket2 = "0.5.8"
